--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Prodavnica</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
 
 	<h1>Prodavnica</h1>
@@ -39,7 +41,7 @@
 			<div class="single-item">
 				<img src="img/sir.png">
 				<div class="si-content">
-					<h3>Sir</h3>
+					<h3>Sir kg</h3>
 					<p class="price">600 din</p>
 				</div>
 				<div class="actions">
@@ -48,10 +50,10 @@
 				</div>
 			</div>
 
-            <div class="single-item">
+			<div class="single-item">
 				<img src="img/meso.png">
 				<div class="si-content">
-					<h3>Meso</h3>
+					<h3>Meso kg</h3>
 					<p class="price">670 din</p>
 				</div>
 				<div class="actions">
@@ -64,7 +66,7 @@
 
 		<div class="cart">
 			<h2>Korpa</h2>
-			
+
 			<div class="cart-items"></div>
 
 			<div class="total"></div>
@@ -73,4 +75,5 @@
 
 	<script src="script.js"></script>
 </body>
+
 </html>
